--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <style src="minji.css" />
+    <link rel="stylesheet" href="minji.css">    
     <title>fighting-git</title>
+    </head>
   </head>
   <body>
     <h1>git</h1>
